hotfix bug on overflowing table content on crud table overflow-x overlfow-y

--- a/backend/api/static/css/crudacc.css
+++ b/backend/api/static/css/crudacc.css
@@ -268,6 +268,8 @@ tr:nth-child(even) {
 .table-acc {
     width: 100%;
     border-collapse: collpase;
+    font-size: 14px;
+    padding: 0px 0px 0px 0px;
 
 }
 
@@ -276,8 +278,9 @@ tr:nth-child(even) {
     overflow-x:auto;
     overflow-y: auto;
     background-color: #fff;
-    padding:20px;
+    padding: 30px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
+    height:500px;
 }
